Adicionei uma nova meta TAG

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <meta name="keywords" content="Cartao, Débito, VisaCard">
       <meta name="description" content="Cartão de débito VISA">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <meta name="Author" content="Lavinia Souza Queiroz">
       <title>Cartao Débito</title>
       <link rel="stylesheet" href="css/style.css">
       <link rel="shortcut icon" href="img/icons8-visa-96.png"type="image/x-icon">
